fix input placeholder contrast, add italic style for visual contrast with inputted value

--- a/app/styles/settings.forms.scss
+++ b/app/styles/settings.forms.scss
@@ -3,6 +3,33 @@
   Redefine form and select elements here.
  ========================================================================== */
 
+/* Fix input field placeholder contrast
+ ========================================================================== */
+
+.input-field {
+  // Placeholder styles
+  &::-webkit-input-placeholder {
+    color: $gray-light-contrast;
+    font-style: italic;
+  }
+
+  &::-moz-placeholder {
+    color: $gray-light-contrast;
+    font-style: italic;
+  }
+
+  &:-ms-input-placeholder {
+    color: $gray-light-contrast;
+    font-style: italic;
+  }
+
+  &:-moz-placeholder {
+    color: $gray-light-contrast;
+    font-style: italic;
+  }
+}
+
+
 /* Fix datepicker width
  ========================================================================== */
 
